Modify horizaccordion transitions to prevent unwanted overflow of elements when quickly transitioning between items

--- a/shared/scss/components/common/horizaccordion.scss
+++ b/shared/scss/components/common/horizaccordion.scss
@@ -47,7 +47,7 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out 0.2s;
     margin-top: $base*2;
     box-sizing: border-box;
 
@@ -107,7 +107,7 @@
 
           .horizaccordion__text,
           .horizaccordion__meta,
-          .horizaccordion__footer .btn {
+          .horizaccordion__footer a {
             opacity: 1;
             transition: opacity .3s ease-in-out .1s;
           }
